[package]
authors = ["Jakub Liska <pragmaxim@gmail.com>"]
description = "An adapter that turns elements into batches of minimal element count. Needed for efficient work parallelization."
license = "MIT OR Apache-2.0"
name = "min-batch"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pragmaxim/min-batch"

[lib]
bench = false

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[dev-dependencies.doc-comment]
version = "0.3"

[[bench]]
name = "min_batch_benchmark"
harness = false
